-Fix menu-logo alignement -Fix api route link -Fix Font leaderboard

--- a/src/atoms/Logo/logo.scss
+++ b/src/atoms/Logo/logo.scss
@@ -27,7 +27,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  height: 100%;
+  height: 90%;
   position: relative;
   z-index: 2;
 
