--- a/src/molecules/Leaderboard/Leaderboard.scss
+++ b/src/molecules/Leaderboard/Leaderboard.scss
@@ -48,7 +48,7 @@
     }
 
     .info-subtitle {
-      font-family: $marvin-vision-regular;
+      font-family: $marvin-vision-bold;
       font-size: 30px;
       line-height: 26px;
       letter-spacing: 0.05em;
@@ -82,7 +82,7 @@
     align-items: center;
 
     span {
-      font-family: $marvin-vision-medium;
+      font-family: $marvin-vision-bold;
       color: $third-color;
       font-size: 22px;
 
